src/styles/main.css
/* ... */
@media screen and (max-width: 480px) {
  html,
  body {
    min-width: 320px;
  }
}

html {
  box-sizing: border-box;
}

*,
*:before,
*:after {
  box-sizing: inherit;
}

body {
  background: #242629;
}

body.is-preload *,
body.is-preload *:before,
body.is-preload *:after {
  animation: none;
  transition: none;
}

body.is-resizing *,
body.is-resizing *:before,
body.is-resizing *:after {
  animation: none;
  transition: none;
}

/* Type */

body,
input,
select,
textarea {
  color: #a0a0a1;
  font-family: "Source Sans Pro", Helvetica, sans-serif;
  font-size: 15pt;
  font-weight: 300;
  letter-spacing: 0.025em;
  line-height: 1.65;
}

@media screen and (max-width: 1680px) {
  body,
  input,
  select,
  textarea {
    font-size: 11pt;
  }
}

a {
  transition:
    color 0.2s ease-in-out,
    border-bottom-color 0.2s ease-in-out;
  border-bottom: dotted 1px;
  color: #34a58e;
  text-decoration: none;
}

a:hover {
  border-bottom-color: transparent;
  color: #34a58e;
}

strong,
b {
  color: #ffffff;
  font-weight: 300;
}

em,
i {
  font-style: italic;
}

p {
  margin: 0 0 2em 0;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  color: #ffffff;
  font-weight: 300;
  letter-spacing: 0.1em;
  line-height: 1.5;
  margin: 0 0 1em 0;
  text-transform: uppercase;
}

h1 a,
h2 a,
h3 a,
h4 a,
h5 a,
h6 a {
  color: inherit;
  text-decoration: none;
}

h1 {
  font-size: 2em;
}

h2 {
  font-size: 1.25em;
}

h3 {
  font-size: 1.1em;
}

h4 {
  font-size: 1em;
}

h5 {
  font-size: 0.9em;
}

h6 {
  font-size: 0.7em;
}

@media screen and (max-width: 736px) {
  h2 {
    font-size: 1em;
  }

  h3 {
    font-size: 0.9em;
  }

  h4 {
    font-size: 0.8em;
  }

  h5 {
    font-size: 0.7em;
  }

  h6 {
    font-size: 0.7em;
  }
}

sub {
  font-size: 0.8em;
  position: relative;
  top: 0.5em;
}

sup {
  font-size: 0.8em;
  position: relative;
  top: -0.5em;
}

blockquote {
  border-left: 4px #36383c;
  font-style: italic;
  margin: 0 0 2em 0;
  padding: 0.5em 0 0.5em 2em;
}

code {
  background: #34363b;
  border: solid 1px #36383c;
  font-family: "Courier New", monospace;
  font-size: 0.9em;
  margin: 0 0.25em;
  padding: 0.25em 0.65em;
}

pre {
  font-family: "Courier New", monospace;
  font-size: 0.9em;
  margin: 0 0 2em 0;
}

pre code {
  display: block;
  line-height: 1.75;
  padding: 1em 1.5em;
  overflow-x: auto;
}

hr {
  border: 0;
  border-bottom: solid 1px #36383c;
  margin: 2em 0;
}

hr.major {
  margin: 3em 0;
}

.align-left {
  text-align: left;
}

.align-center {
  text-align: center;
}

.align-right {
  text-align: right;
}

/* Poptrox Popup */

.poptrox-popup {
  background: rgba(31, 34, 36, 0.925);
  box-shadow: 0 1em 3em 0.5em rgba(0, 0, 0, 0.25);
  cursor: default;
}

.poptrox-popup:before {
  transition: opacity 0.2s ease-in-out;
  background-image:
    linear-gradient(
      to left,
      rgba(31, 34, 36, 0.35),
      rgba(31, 34, 36, 0) 10em,
      rgba(31, 34, 36, 0)
    ),
    linear-gradient(
      to right,
      rgba(31, 34, 36, 0.35),
      rgba(31, 34, 36, 0) 10em,
      rgba(31, 34, 36, 0)
    );
  content: "";
  display: block;
  height: 100%;
  left: 0;
  position: absolute;
  top: 0;
  width: 100%;
  z-index: 1;
  opacity: 1;
}

.poptrox-popup .closer {
  transition: opacity 0.2s ease-in-out;
  background-image: url("images/close.svg");
  background-position: center;
  background-repeat: no-repeat;
  background-size: 3em;
  height: 5em;
  opacity: 0;
  position: absolute;
  right: 0;
  top: 0;
  width: 5em;
  z-index: 2;
}

.poptrox-popup .nav-previous,
.poptrox-popup .nav-next {
  transition: opacity 0.2s ease-in-out;
  background-image: url("images/arrow.svg");
  background-position: center;
  background-repeat: no-repeat;
  background-size: 5em;
  cursor: pointer;
  height: 8em;
  margin-top: -4em;
  opacity: 0;
  position: absolute;
  top: 50%;
  width: 6em;
  z-index: 2;
}

.poptrox-popup .nav-previous {
  transform: scaleX(-1);
  left: 0;
}

.poptrox-popup .nav-next {
  right: 0;
}

.poptrox-popup .caption {
  padding: 2em 2em 0.1em 2em;
  background-image: linear-gradient(
    to top,
    rgba(16, 16, 16, 0.45) 25%,
    rgba(16, 16, 16, 0) 100%
  );
  bottom: 0;
  cursor: default;
  left: 0;
  position: absolute;
  text-align: left;
  width: 100%;
  z-index: 2;
}

.poptrox-popup .caption h2,
.poptrox-popup .caption h3,
.poptrox-popup .caption h4,
.poptrox-popup .caption h5,
.poptrox-popup .caption h6 {
  margin: 0 0 0.5em 0;
}

.poptrox-popup .caption p {
  color: #ffffff;
}

.poptrox-popup .loader {
  animation: spinner 1s infinite linear;
  background-image: url("images/spinner.svg");
  background-position: center;
  background-repeat: no-repeat;
  background-size: contain;
  display: block;
  font-size: 2em;
  height: 2em;
  left: 50%;
  line-height: 2em;
  margin: -1em 0 0 -1em;
  opacity: 0.25;
  position: absolute;
  text-align: center;
  top: 50%;
  width: 2em;
}

.poptrox-popup:hover .closer,
.poptrox-popup:hover .nav-previous,
.poptrox-popup:hover .nav-next {
  opacity: 0.5;
}

.poptrox-popup:hover .closer:hover,
.poptrox-popup:hover .nav-previous:hover,
.poptrox-popup:hover .nav-next:hover {
  opacity: 1;
}

.poptrox-popup.loading:before {
  opacity: 0;
}

body.touch .poptrox-popup .closer,
body.touch .poptrox-popup .nav-previous,
body.touch .poptrox-popup .nav-next {
  opacity: 1;
}

@media screen and (max-width: 980px) {
  .poptrox-popup .closer {
    background-size: 3em;
  }

  .poptrox-popup .nav-previous,
  .poptrox-popup .nav-next {
    background-size: 4em;
  }
}

@media screen and (max-width: 736px) {
  .poptrox-popup:before {
    display: none;
  }

  .poptrox-popup .caption {
    display: none;
  }

  .poptrox-popup .closer,
  .poptrox-popup .nav-previous,
  .poptrox-popup .nav-next {
    display: none;
  }
}

/* Wrapper */

#wrapper {
  transition: filter 0.5s ease;
  position: relative;
}
/* ... */

